# inver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
CHRLoupe/: AppDelegate.h  AppDelegate.m  CHRDataSource.h  CHRDataSource.mm  HeaderView.h  HeaderView.m  HeaderView.xib  Info.plist  NESCHRTileItem.h  NESCHRTileItem.m  NESCHRTileItem.xib  NoInterpolationImageView.h  NoInterpolationImageView.m  ViewController.h  ViewController.m  main.m
CHRLoupe/Base.lproj/: Main.storyboard
asobitomo/: apu.cc  apu.h  audio_base.h  audio_test.cpp  audio_test.hpp  console_screen.cc  console_screen.h  cpu.cc  cpu.h  cpu_cb_macros.h  cpu_macros.h  flags.h  gl_screen.cc  gl_screen.h  header_type.h  main.cc  mbc1.cc  mbc1.h  mbc2.cc  mbc2.h  mbc3.cc  mbc3.h  mbc5.cc  mbc5.h  mbc_base.h  mbc_types.cc  mbc_types.h  mmu.cc  mmu.h  noise.h  op_names.h  ppu_base.cc  ppu_base.h  ppu_cgb.cc  ppu_cgb.h  ppu_dmg.cc  ppu_dmg.h  ppu_util.cc  ppu_util.h  screen.cc  (+14 more)
audio_test/: main.cpp
bench/: micro.cpp
cpu5a22_test/: catch_main.cpp  tests.cpp  utils.hpp
inver/: bus.cpp  bus.hpp  cart.cpp  cart.hpp  cpu6502.cpp  cpu6502.hpp  header.hpp  main.cpp  mapper.h  nes000.hpp  nes001.cpp  nes001.hpp  nes004.cpp  nes004.h  nes004.hpp  op_macros.hpp  op_names.hpp  ops.cpp  ops.hpp  ppu.cpp  ppu.hpp  screen.cpp  screen.hpp  sdl_input.hpp  utils.cpp  utils.hpp
inver/mapper/: nes000.cpp  nes004.cpp
ntsc/: CMakeLists.txt  demo_impl.h
rhomb/: fort.c  main.cpp
snes/: bus_snes.cpp  bus_snes.hpp  colour.hpp  compositor.cpp  compositor.hpp  cpu5a22.cpp  cpu5a22.hpp  debug.cpp  debug.hpp  dma.cpp  dma.hpp  flags.h  hirom.hpp  logger.hpp  lorom.hpp  main.cpp  mapper.hpp  metadata.cpp  metadata.hpp  mode.cpp  mode.hpp  op_macros_5a22.hpp  op_names_5a22.cpp  op_names_5a22.hpp  ops_5a22.cpp  ops_5a22.hpp  ppu_debug.cpp  ppu_debug.hpp  ppu_utils.cpp  ppu_utils.hpp  regs.hpp  screen.cpp  screen.hpp  sdl_snes_input.hpp  sppu.cpp  sppu.hpp  td.cpp  td.hpp  td_m7.cpp  td_m7.hpp  (+2 more)
snes/snes_spc/: SPC_CPU.h
src/: audio.cpp  audio.hpp  braille_pix.cpp  braille_pix.hpp  bus.cpp  bus.hpp  bus_snes.cpp  bus_snes.hpp  cloop.cpp  cloop.hpp  cpu5a22.cpp  cpu5a22.hpp  cpu6502.cpp  cpu6502.hpp  dev_null.cpp  dev_null.hpp  family_basic_keyboard.hpp  header.cpp  header.hpp  main.cpp  mapper.hpp  op_macros.hpp  op_macros_5a22.hpp  op_names.cpp  op_names.hpp  ops.cpp  ops_5a22.cpp  ops_5a22.hpp  output.hpp  output_null.hpp  output_sdl.cpp  output_sdl.hpp  peripheral.hpp  ppu.cpp  ppu.hpp  ppu_act.cpp  ppu_act.hpp  ppu_utils.cpp  renderer.hpp  renderer_ntsc.cpp  (+14 more)
src/mapper/: nes000.hpp  nes001.cpp  nes001.hpp  nes002.cpp  nes002.hpp  nes003.cpp  nes003.hpp  nes004.cpp  nes004.hpp  nes007.hpp
src/nes_apu/: CMakeLists.txt  cmake_install.cmake  nes_apu.cbp
src/scripts/: anno.py
xcode-snes.xcodeproj/: project.pbxproj
xcode-snes.xcodeproj/project.xcworkspace/xcuserdata/dt0.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-snes.xcodeproj/xcshareddata/xcschemes/: xcode.xcscheme
xcode-snes.xcodeproj/xcuserdata/dt0.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode-snes.xcodeproj/xcuserdata/dt0.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode.xcodeproj/: project.pbxproj
xcode.xcodeproj/project.xcworkspace/xcuserdata/dt0.xcuserdatad/: UserInterfaceState.xcuserstate
xcode.xcodeproj/xcshareddata/xcschemes/: xcode.xcscheme
xcode.xcodeproj/xcuserdata/dt0.xcuserdatad/xcschemes/: xcschememanagement.plist
